fixed z-index glitches

--- a/src/css/Dropdown.css
+++ b/src/css/Dropdown.css
@@ -55,7 +55,7 @@
 	visibility: visible;
 	transform: translateY(0);
 	position: absolute;
-	z-index: 1;
+	z-index: 2;
 }
 
 .menu ul {
@@ -92,4 +92,9 @@
 .dropdown {
 	position: relative;
 	display: inline-block;
+}
+
+.creating-new-shop-container {
+	position: relative;
+	z-index: 1;
 }
