--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -27,6 +27,7 @@
 	font-size: 1.5rem;
 	cursor: pointer;
 	transition: box-shadow 0.4s ease;
+	z-index: 1;
 }
 
 .shop-button:hover {
